fix background on safari

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 @media(min-width: 993px){
   body {
-    background-size: 50vw;
+    background-position: 50vw center;
   }
   h1.page-title {
     color: #000000 !important;
